--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,7 +30,7 @@
           </td>
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
-        <td><%= link_to book.category %></td>
+        <td><%= link_to book.category, search_path(word: book.category) %></td>
         <td id = "books_buttons_<%= book.id %>">
           <%= render partial: 'favorites/favorite-btn', locals: { book: book } %>
         </td>
