--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -96,7 +96,7 @@
         <% end %>
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
-        <td><%= link_to book.category, search_path %></td>
+        <td><%= book.category %></td>
       </tr>
     <% end %>
   </tbody>
