--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,3 +49,11 @@ h3 {
     font-size: 20px;
     font-weight: bold;
 }
+
+.left-message{
+  text-align: left;
+}
+
+.right-message{
+  text-align: right;
+}
