--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,38 +1,46 @@
-<div class="left-button">
-  <%= link_to "ユーザー一覧に戻る", users_path,class:"edit-link" %>
-</div>
-<h4 class="rooms-title">気になる同士</h4>
-<% @entries.each do |e| %>
-  <div class="user-name">
-  <strong>
-    <%#= image_tag e.user.attachment_image_tag, class: "user-image" %>
-      <a class="rooms-user-link" href="/users/<%= e.user.id %>">
-        <%= e.user.name %>さん
-      </a>
-  </strong>
+<div class="container">
+  <div class="left-button">
+    <%= link_to "ユーザー一覧に戻る", users_path,class:"edit-link" %>
   </div>
-<% end %>
-<hr>
-<div class="chats">
-  <div class="chat">
-    <% if @messages.present? %>
-      <% @messages.each do |m| %>
-        <div class="chat-box">
-          <div class="chat-face">
-            <%#= image_tag m.user.attachment_image_tag, class:"user-image" %>
-          </div>
-          <div class="chat-hukidashi"> <strong><%= m.content %></strong> <br>
-            <%= m.created_at.strftime("%Y-%m-%d %H:%M")%>
-          </div>
-        </div>
+  <h4 class="rooms-title">気になる同士</h4>
+  <% @entries.each do |e| %>
+    <div class="user-name">
+    <strong>
+      <%#= image_tag e.user.attachment_image_tag, class: "user-image" %>
+        <a class="rooms-user-link" href="/users/<%= e.user.id %>">
+          <%= e.user.name %>さん
+        </a>
+    </strong>
+    </div>
+  <% end %>
+  <hr>
+  <div class="chats">
+    <div class="chat">
+      <% if @messages.present? %>
+        <% @messages.each do |m| %>
+        <% if m.user != current_user %>
+          <div class="chat-box">
+
+            <div class="chat-face">
+              <%#= image_tag m.user.attachment_image_tag, class:"user-image" %>
+            </div>
+            <div class="left-message"> <strong><%= m.content %></strong> <br>
+              <%= m.created_at.strftime("%Y-%m-%d %H:%M")%>
+            </div>
+            <% else %>
+            <div class="right-message"> <strong><%= m.content %></strong> <br>
+              <%= m.created_at.strftime("%Y-%m-%d %H:%M")%>
+            </div>
+            <% end %>
+        <% end %>
       <% end %>
-    <% end %>
-  </div>
-  <div class="posts">
-    <%= form_for @message do |f| %>
-      <%= f.text_field :content, placeholder: "メッセージを入力して下さい" , size: 70, class:"form-text-field" %>
-        <%= f.hidden_field :room_id, value: @room.id %>
-          <%= f.submit "投稿",class: 'form-submit'%>
-    <% end %>
+    </div>
+    <div class="posts">
+      <%= form_for @message do |f| %>
+        <%= f.text_field :content, placeholder: "メッセージを入力して下さい" , size: 70, class:"form-text-field" %>
+          <%= f.hidden_field :room_id, value: @room.id %>
+            <%= f.submit "投稿",class: 'form-submit'%>
+      <% end %>
+    </div>
   </div>
 </div>
