--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -24,12 +24,12 @@
             <div class="chat-face">
               <%#= image_tag m.user.attachment_image_tag, class:"user-image" %>
             </div>
-            <div class="left-message"> <strong><%= m.content %></strong> <br>
-              <%= m.created_at.strftime("%Y-%m-%d %H:%M")%>
+            <div class="left-message"> <strong><%= m.content %></strong>
+              <%= m.created_at.strftime("%Y-%m-%d")%>
             </div>
             <% else %>
             <div class="right-message"> <strong><%= m.content %></strong> <br>
-              <%= m.created_at.strftime("%Y-%m-%d %H:%M")%>
+              <%= m.created_at.strftime("%Y-%m-%d")%>
             </div>
             <% end %>
         <% end %>
